--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <div id="drawing"></div>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/svg.js/dist/svg.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="svg.min.js"></script>
     <script src="gates.js"></script>
     <script src="allgates.js"></script>
   </body>
