--- a/index.html
+++ b/index.html
@@ -12,10 +12,35 @@
       .svgText::selection {
         background: transparent;
       }
+      .select {
+        background-color: lightgreen;
+      }
+      .truthtable {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+      .truthtable table {
+        border-collapse: collapse;
+      }
+      .truthtable table tr td {
+        padding: 10px;
+      }
     </style>
   </head>
   <body>
-    <div id="drawing"></div>
+    <table>
+      <tr>
+        <td><div id="drawing"></div></td>
+        <td style="vertical-align: top">
+          <div class="truthtable">
+            <table>
+              <thead></thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </td>
+      </tr>
+    </table>
+
     <script src="jquery.min.js"></script>
     <script src="svg.min.js"></script>
     <script src="gates.js"></script>
