--- a/halfadder.html
+++ b/halfadder.html
@@ -27,23 +27,11 @@
     </style>
   </head>
   <body>
-    <table id="gates">
-      <tr>
-        <td><div id="drawing"></div></td>
-        <td style="vertical-align: top">
-          <div class="truthtable">
-            <table>
-              <thead></thead>
-              <tbody></tbody>
-            </table>
-          </div>
-        </td>
-      </tr>
-    </table>
+    <div id="drawing"></div>
 
     <script src="jquery.min.js"></script>
     <script src="svg.min.js"></script>
     <script src="gates.js"></script>
-    <script src="allgates.js"></script>
+    <script src="halfadder.js"></script>
   </body>
 </html>
