--- a/fulladder.html
+++ b/fulladder.html
@@ -31,7 +31,7 @@
       <table width="100%">
         <tr>
           <td>
-            <h1 style="margin-bottom: -20px">Half adder</h1>
+            <h1 style="margin-bottom: -20px">Full adder</h1>
             <br /><span style="font-size: .8em"
               >By Michell Cronberg - for use in traning</span
             >
@@ -45,6 +45,6 @@
     <script src="jquery.min.js"></script>
     <script src="svg.min.js"></script>
     <script src="gates.js"></script>
-    <script src="halfadder.js"></script>
+    <script src="fulladder.js"></script>
   </body>
 </html>
